homeworks/mykhailenko/module-03/lesson-06/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-deploy
  namespace: lab
  labels:
    env: qa
spec:
  replicas: 10
  selector:
    matchLabels:
      env: qa
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: lab-pod
      namespace: lab
      labels:
        env: qa
    spec:
      containers:
        - name: app
          image: mmykhailenko/lesson-04:dev
          ports:
            - containerPort: 8080
