homeworks/mykhailenko/module-03/lesson-06/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-svc
  namespace: lab
spec:
  type: ClusterIP
  selector:
    env: qa
    app: dev
  ports:
    - name: api
      port: 8080
      targetPort: 8080
